# URL_Shortener

./: .env  Dockerfile  Jenkinsfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  models.py  route.py
app/static/: style.css
app/templates/: URL_Dashboard.html  analytics.html  base.html  index.html  login.html  signup.html
instance/: site.db
migrations/versions/: 0f08f8a0380c_added_region_and_city.py  641738af47a7_initial_tables.py  9487379b656e_update_click_schema.py  b176bb5c8efc_initial.py
